feat: add skill sections to sidebar

--- a/src/styles/cvViewer.module.css
+++ b/src/styles/cvViewer.module.css
@@ -67,3 +67,45 @@
     gap: 0.6rem;
     align-items: center;
 }
+
+/* Skillset sections */
+
+.skills ul,
+.languages ul {
+    margin: 0;
+    padding: 0;
+}
+
+.skills li,
+.languages li {
+    margin-left: 1rem;
+}
+
+.skills p,
+.languages p {
+    margin-bottom: 0.5rem;
+}
+
+.rating-bar {
+    height: 0.5rem;
+    width: 100%;
+    display: flex;
+    border: 1px solid var(--color-base);
+}
+
+.rating-bar > .rating-block {
+    height: 100%;
+    width: 20%;
+}
+
+.rating-bar > .rating-block:not(:first-child) {
+    border-left: 1px solid var(--color-base);
+}
+
+.rating-block.set {
+    background: var(--color-base);
+}
+
+.rating-bar > .rating-block.set:not(:first-child) {
+    border-left: 1px solid var(--color-sidebar);
+}
