feat: add experience section to cv content

--- a/src/styles/cvViewer.module.css
+++ b/src/styles/cvViewer.module.css
@@ -133,13 +133,14 @@
     margin-top: 0.5rem;
 }
 
-/* Education section */
+/* Education and experience sections */
 
 .school-info {
     margin-block: 1rem;
 }
 
-.school-info .header {
+.school-info .header,
+.work-info .header {
     background: white;
     padding: 0;
     display: flex;
@@ -148,20 +149,34 @@
 }
 
 .school-info h3,
-.school-info p {
+.school-info p,
+.work-info h3,
+.work-info p,
+.work-info ul {
     margin: 0;
     padding: 0;
 }
 
-.school-info h3 {
+.school-info h3,
+.work-info h3 {
     font-weight: 500;
     font-size: 1.05rem;
 }
 
-.school-info p {
+.school-info p,
+.work-info p,
+.work-info li {
     font-size: 0.9rem;
 }
 
 .school-info .school-subject {
     padding-left: 1rem;
+}
+
+.work-info {
+    margin-block: 1.5rem;
+}
+
+.work-info ul {
+    margin-left: 2rem;
 }
